glmm interface in order

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -8,3 +8,20 @@
   year={2011},
   publisher={Nature Research}
 }
+
+@misc{wiki_mle,
+  author = "Wikipedia",
+  title = "Maximum likelihood estimation --- Wikipedia, The Free Encyclopedia",
+  year = "2017",
+  howpublished = "http://en.wikipedia.org/w/index.php?title=Maximum\%20likelihood\%20estimation&oldid=793754373",
+  note = "[Online; accessed 08-September-2017]"
+}
+
+@inproceedings{minka2001,
+  title={Expectation propagation for approximate Bayesian inference},
+  author={Minka, Thomas P},
+  booktitle={Proceedings of the Seventeenth conference on Uncertainty in artificial intelligence},
+  pages={362--369},
+  year={2001},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
